function initAccordion fix

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,9 +10,9 @@
     },
     "rules": {
         "indent": [
-            "error",
-            2
+            "off"
         ],
+            
         "linebreak-style": [
             "off"
         ],
